@@ -18,7 +18,6 @@ import java.io.Reader;
 import java.io.Serial;
 import java.net.URI;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.EventObject;
 import java.util.List;
@@ -27,45 +26,43 @@ import java.util.logging.Level;
 import java.util.logging.Logger;
 
 /**
- * This class makes it easy to drag and drop files from the operating system to a Java program. Any
- * {@code java.awt.Component} can be dropped onto, but only {@code javax.swing.JComponent}s will indicate the drop event
- * with a changed border.
+ * This class makes it easy to drag and drop files from the operating system to a Java program. Any {@code java.awt.Component} can be dropped onto,
+ * but only {@code javax.swing.JComponent}s will indicate the drop event with a changed border.
  *
  * <p>
- * To use this class, construct a new {@code FileDrop} by passing it the target component and a {@code Listener} to
- * receive notification when file(s) have been dropped. Here is an example:
+ * To use this class, construct a new {@code FileDrop} by passing it the target component and a {@code Listener} to receive notification when file(s)
+ * have been dropped. Here is an example:
  *
  * <p>
- * {@code JPanel myPanel = new JPanel(); new FileDrop( myPanel, new FileDrop.Listener() { public void filesDropped(
- * java.io.File[] files ) { // handle file drop ... } // end filesDropped }); // end FileDrop.Listener }
+ * {@code JPanel myPanel = new JPanel(); new FileDrop( myPanel, new FileDrop.Listener() { public void filesDropped( java.io.File[] files ) { // handle
+ * file drop ... } // end filesDropped }); // end FileDrop.Listener }
  *
  * <p>
- * You can specify the border that will appear when files are being dragged by calling the constructor with a
- * {@code javax.swing.border.Border}. Only {@code JComponent}s will show any indication with a border.
+ * You can specify the border that will appear when files are being dragged by calling the constructor with a {@code javax.swing.border.Border}. Only
+ * {@code JComponent}s will show any indication with a border.
  *
  * <p>
- * You can turn on some debugging features by passing a {@code PrintStream} object (such as {@code System.out}) into the
- * full constructor. A {@code null} value will result in no extra debugging information being output.
+ * You can turn on some debugging features by passing a {@code PrintStream} object (such as {@code System.out}) into the full constructor. A
+ * {@code null} value will result in no extra debugging information being output.
  */
 public class FileDrop {
   private static final Logger LOG = Logger.getLogger(FileDrop.class.getName());
   private static final String ZERO_CHAR_STRING = "" + (char) 0;
 
-  /** Discover if the running JVM is modern enough to have drag and drop. */
+  /**
+   * Discover if the running JVM is modern enough to have drag and drop.
+   */
   private static Boolean supportsDnD;
 
   private DropTargetListener dropListener;
 
   /**
-   * Constructor with a specified border and debugging optionally turned on. With Debugging turned on, more status
-   * messages will be displayed to {@code out}. A common way to use this constructor is with {@code System.out} or
-   * {@code System.err}. A {@code null} value for the parameter {@code
-   * out} will result in no debugging output.
+   * Constructor with a specified border and debugging optionally turned on. With Debugging turned on, more status messages will be displayed to
+   * {@code out}. A common way to use this constructor is with {@code System.out} or {@code System.err}. A {@code null} value for the parameter
+   * {@code out} will result in no debugging output.
    *
-   * @param c
-   *          Component on which files will be dropped.
-   * @param listener
-   *          Listens for {@code filesDropped}.
+   * @param c        Component on which files will be dropped.
+   * @param listener Listens for {@code filesDropped}.
    * @since 1.0
    */
   public FileDrop(final Component c, final Listener listener) {
@@ -73,16 +70,13 @@ public class FileDrop {
   }
 
   /**
-   * Full constructor with a specified border and debugging optionally turned on. With Debugging turned on, more status
-   * messages will be displayed to {@code out}. A common way to use this constructor is with {@code System.out} or
-   * {@code System.err}. A {@code null} value for the parameter {@code out} will result in no debugging output.
+   * Full constructor with a specified border and debugging optionally turned on. With Debugging turned on, more status messages will be displayed to
+   * {@code out}. A common way to use this constructor is with {@code System.out} or {@code System.err}. A {@code null} value for the parameter
+   * {@code out} will result in no debugging output.
    *
-   * @param c
-   *          Component on which files will be dropped.
-   * @param recursive
-   *          Recursively set children as drop targets.
-   * @param listener
-   *          Listens for {@code filesDropped}.
+   * @param c         Component on which files will be dropped.
+   * @param recursive Recursively set children as drop targets.
+   * @param listener  Listens for {@code filesDropped}.
    * @since 1.0
    */
   public FileDrop(final Component c, final boolean recursive, final Listener listener) {
@@ -125,20 +119,21 @@ public class FileDrop {
     // Listen for hierarchy changes and remove the drop target when the parent
     // gets cleared out.
     c.addHierarchyListener(
-        evt -> {
-          LOG.log(Level.FINE, "FileDrop: Hierarchy changed.");
-          Component parent = c.getParent();
-          if (parent == null) {
-            c.setDropTarget(null);
-            LOG.log(Level.FINE, "FileDrop: Drop target cleared from component.");
-          } else {
-            new DropTarget(c, this.dropListener);
-            LOG.log(Level.FINE, "FileDrop: Drop target added to component.");
-          }
-        });
+      evt -> {
+        LOG.log(Level.FINE, "FileDrop: Hierarchy changed.");
+        Component parent = c.getParent();
+        if (parent == null) {
+          c.setDropTarget(null);
+          LOG.log(Level.FINE, "FileDrop: Drop target cleared from component.");
+        } else {
+          new DropTarget(c, this.dropListener);
+          LOG.log(Level.FINE, "FileDrop: Drop target added to component.");
+        }
+      });
 
-    if (c.getParent() != null)
+    if (c.getParent() != null) {
       new DropTarget(c, dropListener);
+    }
 
     if (recursive && (c instanceof Container container)) {
       // Get it's components
@@ -152,12 +147,11 @@ public class FileDrop {
   }
 
   /**
-   * Removes the drag-and-drop hooks from the component and optionally from the all children. You should call this if you
-   * add and remove components after you've set up the drag-and-drop. This will recursively unregister all components
-   * contained within <var>c</var> if <var>c</var> is a {@link java.awt.Container}.
+   * Removes the drag-and-drop hooks from the component and optionally from the all children. You should call this if you add and remove components
+   * after you've set up the drag-and-drop. This will recursively unregister all components contained within <var>c</var> if <var>c</var> is a
+   * {@link java.awt.Container}.
    *
-   * @param c
-   *          The component to unregister as a drop target
+   * @param c The component to unregister as a drop target
    * @return Was the operation successful?
    * @since 1.0
    */
@@ -166,13 +160,11 @@ public class FileDrop {
   }
 
   /**
-   * Removes the drag-and-drop hooks from the component and optionally from the all children. You should call this if you
-   * add and remove components after you've set up the drag-and-drop.
+   * Removes the drag-and-drop hooks from the component and optionally from the all children. You should call this if you add and remove components
+   * after you've set up the drag-and-drop.
    *
-   * @param c
-   *          The component to unregister
-   * @param recursive
-   *          Recursively unregister components within a container
+   * @param c         The component to unregister
+   * @param recursive Recursively unregister components within a container
    * @return Was the operation successful?
    * @since 1.0
    */
@@ -247,8 +239,9 @@ public class FileDrop {
           fileList.toArray(filesTemp);
 
           // Alert listener to drop.
-          if (listener != null)
+          if (listener != null) {
             listener.filesDropped(filesTemp);
+          }
 
           // Mark that drop is completed.
           evt.getDropTargetContext().dropComplete(true);
@@ -270,8 +263,9 @@ public class FileDrop {
 
             BufferedReader br = new BufferedReader(reader);
 
-            if (listener != null)
+            if (listener != null) {
               listener.filesDropped(createFileArray(br));
+            }
 
             // Mark that drop is completed.
             evt.getDropTargetContext().dropComplete(true);
@@ -309,7 +303,9 @@ public class FileDrop {
       }
     }
 
-    /** Determine if the dragged data is a file list. */
+    /**
+     * Determine if the dragged data is a file list.
+     */
     private static boolean isDragOk(final DropTargetDragEvent evt) {
       boolean ok = false;
 
@@ -322,7 +318,7 @@ public class FileDrop {
         // Is the flavor a file list?
         final DataFlavor curFlavor = flavors[i];
         if (curFlavor.equals(DataFlavor.javaFileListFlavor)
-            || curFlavor.isRepresentationClassReader()) {
+          || curFlavor.isRepresentationClassReader()) {
           ok = true;
         }
         i++;
@@ -342,17 +338,18 @@ public class FileDrop {
         while ((line = bReader.readLine()) != null) {
           try {
             // kde seems to append a 0 char to the end of the reader
-            if (ZERO_CHAR_STRING.equals(line))
+            if (ZERO_CHAR_STRING.equals(line)) {
               continue;
-            Path file = Paths.get(new URI(line));
+            }
+            Path file = Path.of(new URI(line));
             list.add(file);
           } catch (Exception ex) {
             LOG.log(Level.SEVERE, "Error with {0}: {1}", new String[] {line, ex.getMessage()});
           }
         }
 
-        return list.toArray(new Path[list.size()]);
-      } catch (IOException ex) {
+        return list.toArray(new Path[0]);
+      } catch (IOException _) {
         LOG.log(Level.SEVERE, "FileDrop: IOException");
       }
       return new Path[0];
@@ -360,9 +357,8 @@ public class FileDrop {
   }
 
   /**
-   * Implement this inner interface to listen for when files are dropped. For example your class declaration may begin
-   * like this: {@code public class MyClass implements FileDrop.Listener ... public void filesDropped( java.io.File[]
-   * files ) { ... } // end filesDropped ... }
+   * Implement this inner interface to listen for when files are dropped. For example your class declaration may begin like this:
+   * {@code public class MyClass implements FileDrop.Listener ... public void filesDropped( java.io.File[] files ) { ... } // end filesDropped ... }
    *
    * @since 1.1
    */
@@ -371,8 +367,7 @@ public class FileDrop {
     /**
      * This method is called when files have been successfully dropped.
      *
-     * @param files
-     *          An array of {@code File}s that were dropped.
+     * @param files An array of {@code File}s that were dropped.
      * @since 1.0
      */
     void filesDropped(Path[] files);
@@ -394,13 +389,10 @@ public class FileDrop {
     private final File[] files;
 
     /**
-     * Constructs an {@link Event} with the array of files that were dropped and the {@link FileDrop} that initiated the
-     * event.
+     * Constructs an {@link Event} with the array of files that were dropped and the {@link FileDrop} that initiated the event.
      *
-     * @param files
-     *          The array of files that were dropped
-     * @param source
-     *          The event source
+     * @param files  The array of files that were dropped
+     * @param source The event source
      * @since 1.1
      */
     public Event(File[] files, Object source) {
@@ -420,8 +412,8 @@ public class FileDrop {
   }
 
   /**
-   * At last an easy way to encapsulate your custom objects for dragging and dropping in your Java programs! When you need
-   * to create a {@link java.awt.datatransfer.Transferable} object, use this class to wrap your object. For example:
+   * At last an easy way to encapsulate your custom objects for dragging and dropping in your Java programs! When you need to create a
+   * {@link java.awt.datatransfer.Transferable} object, use this class to wrap your object. For example:
    *
    * <pre>
    * {@code
@@ -431,9 +423,9 @@ public class FileDrop {
    * ...
    * }
    * </pre>
-   *
-   * Or if you need to know when the data was actually dropped, like when you're moving data out of a list, say, you can
-   * use the {@link TransferableObject.Fetcher} inner class to return your object Just in Time. For example:
+   * <p>
+   * Or if you need to know when the data was actually dropped, like when you're moving data out of a list, say, you can use the
+   * {@link TransferableObject.Fetcher} inner class to return your object Just in Time. For example:
    *
    * <pre>
    * {@code
@@ -448,11 +440,10 @@ public class FileDrop {
    * ...
    * }
    * </pre>
-   *
+   * <p>
    * The {@link java.awt.datatransfer.DataFlavor} associated with {@link TransferableObject} has the representation class
-   * {@code net.iharder.dnd.TransferableObject.class} and MIME type {@code
-   * application/x-net.iharder.dnd.TransferableObject}. This data flavor is accessible via the static {@link #DATA_FLAVOR}
-   * property.
+   * {@code net.iharder.dnd.TransferableObject.class} and MIME type {@code application/x-net.iharder.dnd.TransferableObject}. This data flavor is
+   * accessible via the static {@link #DATA_FLAVOR} property.
    *
    * <p>
    * I'm releasing this code into the Public Domain. Enjoy.
@@ -463,8 +454,7 @@ public class FileDrop {
    */
   public static class TransferableObject implements Transferable {
     /**
-     * The MIME type for {@link #DATA_FLAVOR} is {@code
-     * application/x-net.iharder.dnd.TransferableObject}.
+     * The MIME type for {@link #DATA_FLAVOR} is {@code application/x-net.iharder.dnd.TransferableObject}.
      *
      * @since 1.1
      */
@@ -472,13 +462,12 @@ public class FileDrop {
 
     /**
      * The default {@link java.awt.datatransfer.DataFlavor} for {@link TransferableObject} has the representation class
-     * {@code net.iharder.dnd.TransferableObject.class} and the MIME type
-     * {@code application/x-net.iharder.dnd.TransferableObject}.
+     * {@code net.iharder.dnd.TransferableObject.class} and the MIME type {@code application/x-net.iharder.dnd.TransferableObject}.
      *
      * @since 1.1
      */
     public static final DataFlavor DATA_FLAVOR =
-        new DataFlavor(FileDrop.TransferableObject.class, MIME_TYPE);
+      new DataFlavor(FileDrop.TransferableObject.class, MIME_TYPE);
 
     private Fetcher fetcher;
     private Object data;
@@ -486,13 +475,11 @@ public class FileDrop {
     private DataFlavor customFlavor;
 
     /**
-     * Creates a new {@link TransferableObject} that wraps <var>data</var>. Along with the {@link #DATA_FLAVOR} associated
-     * with this class, this creates a custom data flavor with a representation class determined from
-     * {@code data.getClass()} and the MIME type {@code
-     * application/x-net.iharder.dnd.TransferableObject}.
+     * Creates a new {@link TransferableObject} that wraps <var>data</var>. Along with the {@link #DATA_FLAVOR} associated with this class, this
+     * creates a custom data flavor with a representation class determined from {@code data.getClass()} and the MIME type
+     * {@code application/x-net.iharder.dnd.TransferableObject}.
      *
-     * @param data
-     *          The data to transfer
+     * @param data The data to transfer
      * @since 1.1
      */
     public TransferableObject(Object data) {
@@ -501,12 +488,11 @@ public class FileDrop {
     }
 
     /**
-     * Creates a new {@link TransferableObject} that will return the object that is returned by <var>fetcher</var>. No
-     * custom data flavor is set other than the default {@link #DATA_FLAVOR}.
+     * Creates a new {@link TransferableObject} that will return the object that is returned by <var>fetcher</var>. No custom data flavor is set other
+     * than the default {@link #DATA_FLAVOR}.
      *
+     * @param fetcher The {@link Fetcher} that will return the data object
      * @see Fetcher
-     * @param fetcher
-     *          The {@link Fetcher} that will return the data object
      * @since 1.1
      */
     public TransferableObject(Fetcher fetcher) {
@@ -514,15 +500,13 @@ public class FileDrop {
     }
 
     /**
-     * Creates a new {@link TransferableObject} that will return the object that is returned by <var>fetcher</var>. Along
-     * with the {@link #DATA_FLAVOR} associated with this class, this creates a custom data flavor with a representation
-     * class <var>dataClass</var> and the MIME type {@code application/x-net.iharder.dnd.TransferableObject}.
+     * Creates a new {@link TransferableObject} that will return the object that is returned by <var>fetcher</var>. Along with the
+     * {@link #DATA_FLAVOR} associated with this class, this creates a custom data flavor with a representation class <var>dataClass</var> and the
+     * MIME type {@code application/x-net.iharder.dnd.TransferableObject}.
      *
+     * @param dataClass The {@link java.lang.Class} to use in the custom data flavor
+     * @param fetcher   The {@link Fetcher} that will return the data object
      * @see Fetcher
-     * @param dataClass
-     *          The {@link java.lang.Class} to use in the custom data flavor
-     * @param fetcher
-     *          The {@link Fetcher} that will return the data object
      * @since 1.1
      */
     public TransferableObject(Class<?> dataClass, Fetcher fetcher) {
@@ -531,8 +515,8 @@ public class FileDrop {
     }
 
     /**
-     * Returns the custom {@link java.awt.datatransfer.DataFlavor} associated with the encapsulated object or {@code null}
-     * if the {@link Fetcher} constructor was used without passing a {@link java.lang.Class}.
+     * Returns the custom {@link java.awt.datatransfer.DataFlavor} associated with the encapsulated object or {@code null} if the {@link Fetcher}
+     * constructor was used without passing a {@link java.lang.Class}.
      *
      * @return The custom data flavor for the encapsulated object
      * @since 1.1
@@ -542,9 +526,8 @@ public class FileDrop {
     }
 
     /**
-     * Returns a two- or three-element array containing first the custom data flavor, if one was created in the
-     * constructors, second the default {@link #DATA_FLAVOR} associated with {@link TransferableObject}, and third the
-     * stringFlavor.
+     * Returns a two- or three-element array containing first the custom data flavor, if one was created in the constructors, second the default
+     * {@link #DATA_FLAVOR} associated with {@link TransferableObject}, and third the stringFlavor.
      *
      * @return An array of supported data flavors
      * @since 1.1
@@ -559,36 +542,35 @@ public class FileDrop {
     }
 
     /**
-     * Returns the data encapsulated in this {@link TransferableObject}. If the {@link Fetcher} constructor was used, then
-     * this is when the {@link Fetcher#getObject getObject()} method will be called. If the requested data flavor is not
-     * supported, then the {@link Fetcher#getObject getObject()} method will not be called.
+     * Returns the data encapsulated in this {@link TransferableObject}. If the {@link Fetcher} constructor was used, then this is when the
+     * {@link Fetcher#getObject getObject()} method will be called. If the requested data flavor is not supported, then the
+     * {@link Fetcher#getObject getObject()} method will not be called.
      *
-     * @param flavor
-     *          The data flavor for the data to return
+     * @param flavor The data flavor for the data to return
      * @return The dropped data
      * @since 1.1
      */
     @Override
     public Object getTransferData(DataFlavor flavor)
-        throws UnsupportedFlavorException, IOException {
+      throws UnsupportedFlavorException, IOException {
       // Native object
-      if (flavor.equals(DATA_FLAVOR))
+      if (flavor.equals(DATA_FLAVOR)) {
         return fetcher == null ? data : fetcher.getObject();
+      }
 
       // String
-      if (flavor.equals(DataFlavor.stringFlavor))
+      if (flavor.equals(DataFlavor.stringFlavor)) {
         return fetcher == null ? data.toString() : fetcher.getObject().toString();
+      }
 
       // We can't do anything else
       throw new UnsupportedFlavorException(flavor);
     }
 
     /**
-     * Returns {@code true} if <var>flavor</var> is one of the supported flavors. Flavors are supported using the
-     * {@code equals(...)} method.
+     * Returns {@code true} if <var>flavor</var> is one of the supported flavors. Flavors are supported using the {@code equals(...)} method.
      *
-     * @param flavor
-     *          The data flavor to check
+     * @param flavor The data flavor to check
      * @return Whether or not the flavor is supported
      * @since 1.1
      */
@@ -604,10 +586,9 @@ public class FileDrop {
     }
 
     /**
-     * Instead of passing your data directly to the {@link TransferableObject} constructor, you may want to know exactly
-     * when your data was received in case you need to remove it from its source (or do anyting else to it). When the
-     * {@link #getTransferData getTransferData(...)} method is called on the {@link TransferableObject}, the
-     * {@link Fetcher}'s {@link #getObject getObject()} method will be called.
+     * Instead of passing your data directly to the {@link TransferableObject} constructor, you may want to know exactly when your data was received
+     * in case you need to remove it from its source (or do anyting else to it). When the {@link #getTransferData getTransferData(...)} method is
+     * called on the {@link TransferableObject}, the {@link Fetcher}'s {@link #getObject getObject()} method will be called.
      *
      * @author Robert Harder
      * @version 1.1
