@@ -5,8 +5,8 @@ import de.gurkenlabs.litiengine.resources.Resources;
 import de.gurkenlabs.utiliti.components.Editor;
 import java.awt.event.InputEvent;
 import java.awt.event.KeyEvent;
-import java.io.File;
-import java.nio.file.Paths;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import javax.swing.JMenu;
@@ -34,7 +34,7 @@ public final class FileMenu extends JMenu {
     close.addActionListener(a -> Editor.instance().close(false));
     close.setEnabled(false);
     Editor.instance()
-        .onLoaded(() -> close.setEnabled(Editor.instance().getCurrentResourceFile() != null));
+      .onLoaded(() -> close.setEnabled(Editor.instance().getCurrentResourceFile() != null));
 
     this.recentFiles = new JMenu(Resources.strings().get("menu_file_recentFiles"));
     loadRecentFiles();
@@ -70,13 +70,13 @@ public final class FileMenu extends JMenu {
     recentFiles.removeAll();
     int added = 0;
     for (String recent : Editor.preferences().getLastOpenedFiles()) {
-      if (recent != null && !recent.isEmpty() && new File(recent).exists()) {
+      if (recent != null && !recent.isEmpty() && Files.exists(Path.of(recent))) {
         JMenuItem fileButton = new JMenuItem(recent);
         fileButton.addActionListener(
-            a -> {
-              log.log(Level.INFO, "load {0}", fileButton.getText());
-              Editor.instance().load(Paths.get(fileButton.getText()), false);
-            });
+          a -> {
+            log.log(Level.INFO, "load {0}", fileButton.getText());
+            Editor.instance().load(Path.of(fileButton.getText()), false);
+          });
 
         recentFiles.add(fileButton);
         added++;
@@ -90,12 +90,12 @@ public final class FileMenu extends JMenu {
 
     JMenuItem clear = new JMenuItem(Resources.strings().get("menu_file_clear_recent"));
     clear.addActionListener(
-        a -> {
-          recentFiles.removeAll();
-          Editor.preferences().clearOpenedFiles();
-          Editor.preferences().setLastGameFile(null);
-          recentFiles.setEnabled(false);
-        });
+      a -> {
+        recentFiles.removeAll();
+        Editor.preferences().clearOpenedFiles();
+        Editor.preferences().setLastGameFile(null);
+        recentFiles.setEnabled(false);
+      });
 
     recentFiles.addSeparator();
     recentFiles.add(clear);
